--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   margin-top: 100px;
-  background-image: url("sakura.png.png");
-  
+  background-image: linear-gradient(to right, red , yellow);
 }
 
 input {
