--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   margin-top: 100px;
-  background-image: linear-gradient(to right, red , yellow);
+ 
+  background-image: url("https://img.freepik.com/free-vector/floral-with-cherry-blossoms-full-bloom-pink_8130-710.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 input {
